--- a/Contact.html
+++ b/Contact.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contact </title>
+    <link rel="stylesheet" href="CSS/style.css">
     <hr size="3">
 </head>
+
 <body>
+    <h1> Contact Me: </h1>
     <form action="mailto:info@rohin.ohana62@gmail.com" method="post" enctype="text/plain">
         <label> Your Name </label>
         <input type="text" name="Your Name" value=""> <br>
