--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title> Rohin's Personal Statement </title>
-
+            <link rel="stylesheet" href="CSS/style.css">
     </head>
 
-    <body>
+    <body style="background-color: #EDE9D5;">
         <table cellspacing="20">
             <tr>
-                <td><img src="3-modified.png" alt="Rohin Kumar Lohana"></td>
+                <td><img src="Images/3-modified.png" alt="Rohin Kumar Lohana"></td>
                 <td><h1> Rohin Kumar Lohana </h1>
                     <p> <strong> Civil Engineer </strong> </p>
-                    <p> I am a professional Civil Engineer and currently working at Thar Coal Block II sites.</p></td>
+                    <p> Quality Control Engineer at <strong><i> Al-Khyber Constructions </i></strong></p></td>
             </tr>
         </table>
-        <hr size="3">
+        <hr>
         <h2><strong> Education </strong></h2> 
              <li> BE in Civil Engineering from <strong> <a href=https://www.muet.edu.pk> Mehran University of Engineering and Technology </a> ...... CGPA 3.06/4.0 </strong> </li>
             <li> Intermediate in GHSS Islamkot     .....        80.45% </li>
             <li> Matriculation in GHSS Islamkot    .....      83.43% </li>
-        <hr size="3">
+        <hr>
         <h2> Skills </h2>
         <table cellspacing="10">
             <tr>
@@ -41,7 +41,7 @@
                 <td> ⭐ </td>
             </tr>
          </table>
-        <hr size="3">
+        <hr>
     <h2><strong> Work Experience </strong></h2>
         <table cellspacing="10">
             <thead>
@@ -61,8 +61,8 @@
                 </tr>
             </tbody>
         </table>
-    <hr size="3">
+    <hr>
         <h2> <a href="Contact.html"> Contact me </a></h2>
-    <hr size="3">
+    <hr>
     </body>
 </html> 
